# agentic-war-room

./: .gitignore  README.md  install.sh
coordination/: .gitignore  install.py  pyproject.toml
coordination/docs/: handoff-extension.md
coordination/hooks/: post_tool_use.py  pre_tool_use.py  session_end.py  session_start.py  user_prompt_submit.py
coordination/tests/: conftest.py  test_boards.py  test_cli.py  test_cli_lanes.py  test_client.py  test_config.py  test_conftest.py  test_daemon.py  test_e2e.py  test_engine_checkwrite.py  test_engine_claims.py  test_engine_gc.py  test_engine_lanes.py  test_engine_messaging.py  test_engine_presence.py  test_federation.py  test_federation_e2e.py  test_hooks.py  test_install.py  test_matching.py  test_models.py  test_protocol.py  test_server.py  test_store.py
template/: .env.template  .gitignore  CONTRIBUTING.md  Makefile  README.md  SANITIZATION.md  SOUL.md  channel_directory.json  config.yaml  distribution.yaml  install.sh  manifest.json  pyproject.toml  slack-manifest.json
template/cron/: README.md
template/docs/: installer-preflight.md  runtime-preflight.md
template/hooks/: README.md  first_run.sh  session_start.py
template/memories/: MEMORY.md  USER.md
template/persona/: communication.md  decisions.md  role.md  team.md  voice.md
template/scripts/: README.md  gate_review.py  publish.sh  sanitize_check.py  setup.sh
template/shared/: org.md
template/skill-bundles/: warroom.yaml
template/templates/: claude-head-frontmatter.md  claude-head-trailer.md  soul-preamble.md
template/tests/: conftest.py  (+76 more)
(+107 files in other folders)
