[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mailbox"
version = "0.1.0"
description = "Ambient cross-session coordination for Claude Code"
requires-python = ">=3.9"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests that require a real wall-clock wait (deselect with -m 'not slow')",
]
